 799.	[bug]		The ADB didn't find AAAA glue in a zone unless A6
			glue was also present.

 798.	[bug]		nsupdate should be able to reject bad input lines
			and continue. [RT #1130]

 797.	[func]		Issue a warning if the 'directory' option contains
 			a relative path. [RT #269]

 796.	[func]		When a size limit is associated with a log file,
			only roll it when the size is reached, not every
			time the log file is opened. [RT #1096]

 795.	[func]		Add the +multiline option to dig. [RT #1095]

 794.	[func]		Implement the "port" and "default-port" statements
 			in rndc.conf.

 793.	[cleanup]	The DNSSEC tools could create filenames that were
 			illegal or contained shell metacharacters.  They
			now use a different text encoding of names that
			doesn't have these problems. [RT #1101]

 792.	[cleanup]	Replace the OMAPI command channel protocol with a
 			simpler one.

 791.	[bug]		The command channel now works over IPv6.

 790.	[bug]		Wildcards created using dynamic update or IXFR
			could fail to match. [RT #1111]

 789.	[bug]		The "localhost" and "localnets" ACLs did not match
			when used as the second element of a two-element
			sortlist item.

 788.	[func]		Add the "match-mapped-addresses" option, which
 			causes IPv6 v4mapped addresses to be treated as
			IPv4 addresses for the purpose of acl matching.

 787.	[bug]		The DNSSEC tools failed to downcase domain
			names when mapping them into file names.

 786.	[bug]		When DNSSEC signing/verifying data, owner names were
			not properly downcased.

 785.	[bug]		A race condition in the resolver could cause
			an assertion failure. [RT #673, #872, #1048]

 784.	[bug]		nsupdate and other programs would not quit properly
			if some signals were blocked by the caller. [RT #1081]

 783.	[bug]		Following CNAMEs could cause an assertion failure
			when either using an sdb database or under very
			rare conditions.

 782.	[func]		Implement the "serial-query-rate" option.
